nject/tests/compile_fail/named_wrong_type_tag.stderr
error[E0277]: the trait bound `nject::Named<Bar, String>: Injectable<'_, nject::Named<Bar, String>, WrongTagProvider>` is not satisfied
  --> tests/compile_fail/named_wrong_type_tag.rs:19:34
   |
19 |     let _svc: Service = provider.provide();
   |                                  ^^^^^^^ the trait `Injectable<'_, nject::Named<Bar, String>, WrongTagProvider>` is not implemented for `nject::Named<Bar, String>`
   |
help: the trait `Injectable<'prov, Service, NjectProvider>` is implemented for `Service`
  --> tests/compile_fail/named_wrong_type_tag.rs:7:1
   |
 7 | #[injectable]
   | ^^^^^^^^^^^^^
note: required for `WrongTagProvider` to implement `Provider<'_, nject::Named<Bar, String>>`
  --> tests/compile_fail/named_wrong_type_tag.rs:13:1
   |
13 | #[provider]
   | ^^^^^^^^^^^
note: required for `Service` to implement `Injectable<'_, Service, WrongTagProvider>`
  --> tests/compile_fail/named_wrong_type_tag.rs:7:1
   |
 7 | #[injectable]
   | ^^^^^^^^^^^^^
   = note: 1 redundant requirement hidden
   = note: required for `WrongTagProvider` to implement `Provider<'_, Service>`
note: required by a bound in `WrongTagProvider::provide`
  --> tests/compile_fail/named_wrong_type_tag.rs:13:1
   |
13 | #[provider]
   | ^^^^^^^^^^^ required by this bound in `WrongTagProvider::provide`
   = note: this error originates in the attribute macro `injectable` which comes from the expansion of the attribute macro `provider` (in Nightly builds, run with -Z macro-backtrace for more info)
